<resources>
    <string name="app_name">Foodie. Individual project 2. Madzhunova Anelya. DHT-2-19</string>
    <string name="foodie">Foodie</string>
    <string name="login">Регистрация</string>
    <string name="name">Имя</string>
    <string name="mobile">Номер</string>
    <string name="password">Пароль</string>
    <string name="login2">Зарегистрироваться</string>
    <string name="place_or_product">Место или продукт</string>
    <string name="all">Все</string>
    <string name="burger">Бургеры</string>
    <string name="pizza">Пицца</string>
    <string name="desserts">Десерты</string>
    <string name="pizzaa">PIZZAA</string>
    <string name="burgerb">BurgerB</string>
    <string name="itpiz">ItPiz</string>
    <string name="_75_00_som">75.00 сом</string>
    <string name="_93percent">93%</string>
    <string name="_600">(600)</string>
    <string name="_65_00">65.00 сом</string>
    <string name="_95percent">95%</string>
    <string name="_520">(520)</string>
    <string name="_85_00">85.00 сом</string>
    <string name="_91percent">91%</string>
    <string name="_325">(325)</string>
    <string name="sort_for">Сортировать по</string>
    <string name="near_with_me">Рядом со мной</string>
    <string name="delivery_cost">Стоимость доставки</string>
    <string name="high_raiting">С высоким рейтингом</string>
    <string name="restraunts">Рестораны</string>
    <string name="itpiz_search">Поиск в ItPiz</string>
    <string name="itpiz">ItPiz</string>
    <string name="_35_40">35-40 мин</string>
    <string name="the_popular_sale">ХИТ ПРОДАЖ</string>
    <string name="pizza1">ПИЦЦА</string>
    <string name="pepperoni_23_size">Пепперони традиционное тесто (23 см.)</string>
    <string name="_365">365 сом</string>
    <string name="text1">Фирменный томатный соус, пепперони, моцарелла</string>
    <string name="text2">Выберите размер Пепперони традиционное тесто</string>
    <string name="text3">Выбрать один вариант</string>
    <string name="text4">ОБЯЗАТЕЛЬНО</string>
    <string name="pepperoni_30_size">“Пепперони” традиционное тесто (30 см.)</string>
    <string name="_170">+170 сом</string>
    <string name="text5">Оплата заказа</string>
    <string name="text6">Ваш заказ</string>
    <string name="text7">Продуктов из ItPiz: 2</string>
    <string name="_1x_23">1x Пепперони традиционное тесто (23 см)</string>
    <string name="_1x_23_2">1x Маргарита традиционное тесто (23 см)</string>
    <string name="_300">300 сом</string>
    <string name="text8">Указать информацию об аллергии</string>
    <string name="text9">Информация о доставке</string>
    <string name="text10">Подтвердите заказ</string>
    <string name="help">Помощь</string>
    <string name="tezt11">Ориентировочное время прибытие курьера</string>
    <string name="text12">Ресторан получил ваш заказ</string>
    <string name="text13">Выполняется</string>
    <string name="text14">Получение</string>
    <string name="text15">Доставка</string>
    <string name="text16">Учетная запись</string>
    <string name="text17">Мои заказы</string>
    <string name="text_18">Моя информациия</string>
    <string name="text19">Почта</string>
    <string name="text20">Изменить пароль</string>
    <string name="text21">Изменить номер телефона</string>
    <string name="text22">Способ оплаты</string>
    <string name="text23">Настройки конфиденциальности</string>
</resources>