<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="500dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_22" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_4" />

    <EditText
        style="@style/sortfor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_18"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/_213460_account_avatar_head_person_profile_user_115386_1" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/_46394_1" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/lock__v2_1" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/cell_phone_icon_126579_1" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/bank_cards__v1_1" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/_17183_1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout16"
        app:layout_constraintTop_toBottomOf="@+id/imageView25">

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text19"
            android:layout_marginTop="15dp"/>

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text20"
            android:layout_marginTop="15dp"/>

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text21"
            android:layout_marginTop="15dp"/>

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text22"
            android:layout_marginTop="15dp"/>

        <EditText
            style="@style/near_with_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text23"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/component_42" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/component_42" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/component_42" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/component_42" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/component_42" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/component_42" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>